# raywars

./: .gitignore  Makefile  README.md
resources/: message.txt
src/c/: Makefile  raywars.c
src/c3/: Makefile  project.json
src/c3/res/: Makefile
src/c3/src/: main.c3
src/freebasic/: Makefile  fbc.txt  raywars.bas
src/freebasic/res/: Makefile  ray32.res
src/go/: Makefile  go.mod  main.go  versioninfo.json
src/nelua/: Makefile  raywars.nelua
src/nelua/res/: ray.rc
src/nim/: Makefile  raywars.nim
src/nim/res/: Makefile  resource.nim
src/nimony/: Makefile  raylib_tiny.nim  raywars.nim
src/nimony/res/: ray64.res  resource.nim
src/nodejs/: package.json  raywars.js  raywars.vbs
src/odin/: Makefile  raywars.odin
src/odin/res/: Makefile  ray.rc  ray.res
src/pascal/: Makefile  README.md  raywars.lpi  raywars.lpr  raywars.lps  raywars.res
src/python/: raywars.py  raywars.pyw
src/ruby/: raywars.rb
src/rust/: Cargo.toml  Makefile  build.rs
src/rust/.cargo/: config.toml
src/rust/src/: raywars.rs
src/zig/: Makefile  build.zig  build.zig.zon
src/zig/libzig/raylib/: build.zig
src/zig/src/: raywars.zig
